JSW Devsb/src/objects/Customer_Types__c.object
<CustomObject>
    <fields>
        <fullName>Account_Group__c</fullName>
        <label>Account Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_assignment_Group__c</fullName>
        <label>Account assignment Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Documents__c</fullName>
        <label>Billing Documents</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIN_DETAILS__c</fullName>
        <label>CIN DETAILS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code_Data__c</fullName>
        <label>Company Code Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Ctrl_Area__c</fullName>
        <label>Credit Ctrl Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Stas_Grp__c</fullName>
        <label>Cust Stas.Grp.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <label>Customer Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Pricing_Proc__c</fullName>
        <label>Customer Pricing  Proc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Plant__c</fullName>
        <label>Delivery Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Priority__c</fullName>
        <label>Delivery Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Incoterms1__c</fullName>
        <label>Incoterms1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms2__c</fullName>
        <label>Incoterms2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Name1__c</fullName>
        <label>Name1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name2__c</fullName>
        <label>Name2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_terms__c</fullName>
        <label>Payment terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pincode__c</fullName>
        <label>Pincode</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricing_Group__c</fullName>
        <label>Pricing Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Code__c</fullName>
        <label>SAP Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Area_Data__c</fullName>
        <label>Sales Area Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_District__c</fullName>
        <label>Sales District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Group__c</fullName>
        <label>Sales Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <label>Sales Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <label>Sales Org</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Condition__c</fullName>
        <label>Shipping Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Terms_of_Payments__c</fullName>
        <label>Terms of Payments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YS__c</fullName>
        <label>YS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Customer Type</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CT-{0000}</displayFormat>
        <label>Customer Types Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Types</pluralLabel>
    <recordTypes>
        <fullName>Middle_Man_Communication</fullName>
        <active>true</active>
        <label>Middle Man Communication</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Promoters</fullName>
        <active>true</active>
        <label>Sales Promoters</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sub_Dealer</fullName>
        <active>true</active>
        <label>Sub Dealer</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Company_Code</fullName>
        <active>true</active>
        <errorConditionFormula>Company_Code__c  &lt;&gt; 3000</errorConditionFormula>
        <errorDisplayField>Company_Code__c</errorDisplayField>
        <errorMessage>Company Code Default Value is 3000</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SAP_Code</fullName>
        <active>true</active>
        <errorConditionFormula>OR(LEN( SAP_Code__c ) &lt;&gt; 10, NOT(BEGINS(SAP_Code__c, &apos;AP&apos;) ), NOT(ISNUMBER( RIGHT(SAP_Code__c, 8))) )</errorConditionFormula>
        <errorDisplayField>SAP_Code__c</errorDisplayField>
        <errorMessage>SAP Code Should contain 10 Alphanumeric Values Starting with &quot;AP&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Org</fullName>
        <active>true</active>
        <errorConditionFormula>VALUE( Sales_Org__c ) &lt;&gt; 3000</errorConditionFormula>
        <errorDisplayField>Sales_Org__c</errorDisplayField>
        <errorMessage>Sales Org Default Value is 3000</errorMessage>
    </validationRules>
</CustomObject>